# forex-factory-calendar-mcp

./: Cargo.toml  README.md  TODO.md  test_mcp.sh  test_mcp2.sh
examples/: debug_html.rs  test_parser.rs
src/: main.rs  scraper.rs  service.rs  types.rs
src/mcp/: server.rs  tools.rs
src/scraper/: browser.rs  http_client.rs  parser.rs
src/service/: calendar.rs
src/types/: currency.rs  event.rs  impact.rs  query.rs
