[package]
name = "forex-factory-calendar-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
color-eyre = "0.6.5"
forex-factory = { git = "https://github.com/matiu2/forex-factory.git" }
rmcp = { version = "0.12.0", features = ["server", "transport-io"] }
schemars = "1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
